force-app/main/default/objects/Employee__c/fields/BU__c.field-meta.xml
<CustomField>
    <fullName>BU__c</fullName>
    <description>Display short version of Business Unit. Used in Stakeholder mapping</description>
    <formula>TRIM(MID(Business_Unit__c,FIND(&quot; &quot;,Business_Unit__c),30))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BU</label>
    <type>Text</type>
</CustomField>