force-app/main/default/objects/Employee__c/fields/Employee_Number__c.field-meta.xml
<CustomField>
    <fullName>Employee_Number__c</fullName>
    <externalId>true</externalId>
    <label>Employee Number</label>
    <length>6</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>