force-app/main/default/objects/Employee__c/fields/Quit__c.field-meta.xml
<CustomField>
    <fullName>Quit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quit</label>
    <type>Checkbox</type>
</CustomField>