force-app/main/default/objects/Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee_Number__c</columns>
    <columns>Email__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Business_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>